# play_testcontainers

./: Cargo.toml  docker-compose.yml
.github/workflows/: rust.yml
src/: lib.rs  postgres.rs  redis.rs  s3.rs
tests/: integration.rs  integration_postgres.rs  integration_redis.rs  integration_s3.rs  integration_valkey.rs
