[package]
name = "play_testcontainers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
redis = "0.25.3"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["blocking", "redis"] }
