[package]
name = "play_testcontainers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1.37.0", features = ["full"] }
redis = "0.25.3"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
base64 = "0.21"
aws-config = "1.1.8"
aws-sdk-s3 = { version = "1.20.0", features = ["behavior-version-latest"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "macros", "uuid", "migrate"] }
byteorder = "1.5.0"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.10.1"
testcontainers = "0.16.7"
testcontainers-modules = { version = "0.4.2", features = ["blocking", "redis", "minio"] }
